<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.proprog.quizapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="4dp"
        android:paddingRight="4dp">

        <android.support.v7.widget.CardView
            style="@style/cardStyle"
            app:cardBackgroundColor="@color/cardBackgroundColor">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/questionStyle"
                    android:text="@string/question_one" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        style="@style/choiceStyle"
                        android:text="@string/question_one_a" />

                    <RadioButton
                        style="@style/choiceStyle"
                        android:text="@string/question_one_b" />

                    <RadioButton
                        style="@style/choiceStyle"
                        android:text="@string/question_one_c" />

                    <RadioButton
                        style="@style/choiceStyle"
                        android:text="@string/question_one_d" />
                </RadioGroup>
            </LinearLayout>
        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            style="@style/cardStyle"
            app:cardBackgroundColor="@color/cardBackgroundColor">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/questionStyle"
                    android:text="@string/question_two" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        style="@style/choiceStyle"
                        android:text="@string/question_two_a" />

                    <RadioButton
                        style="@style/choiceStyle"
                        android:text="@string/question_two_b" />

                    <RadioButton
                        style="@style/choiceStyle"
                        android:text="@string/question_two_c" />

                    <RadioButton
                        style="@style/choiceStyle"
                        android:text="@string/question_two_d" />
                </RadioGroup>
            </LinearLayout>
        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            style="@style/cardStyle"
            android:focusableInTouchMode="true"
            app:cardBackgroundColor="@color/cardBackgroundColor">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/questionStyle"
                    android:text="@string/question_three" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    android:inputType="text" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            style="@style/cardStyle"
            android:focusableInTouchMode="true"
            app:cardBackgroundColor="@color/cardBackgroundColor">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/questionStyle"
                    android:text="@string/question_four" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    android:inputType="text" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            style="@style/cardStyle"
            app:cardBackgroundColor="@color/cardBackgroundColor">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/questionStyle"
                    android:text="@string/question_five" />


                <CheckBox
                    style="@style/choiceStyle"
                    android:text="@string/question_five_a" />

                <CheckBox
                    style="@style/choiceStyle"
                    android:text="@string/question_five_b" />

                <CheckBox
                    style="@style/choiceStyle"
                    android:text="@string/question_five_c"
                    android:textColor="#757575" />

                <CheckBox
                    style="@style/choiceStyle"
                    android:text="@string/question_five_d" />
            </LinearLayout>
        </android.support.v7.widget.CardView>


    </LinearLayout>


</ScrollView>
